--- a/travel-unravel_Final/about_us.html
+++ b/travel-unravel_Final/about_us.html
@@ -157,13 +157,13 @@
 
 
 
-<!-- START AboutPageMain -->
-<section class="AboutPageMain">
+<!-- START aboutPageMain -->
+<section class="aboutPageMain">
+	<img class="about_Img" src="images/about-bg.png" alt="img" />
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-md-12 col-sm-12">
-				<div class="aboutPageRight">
-
+				<div class="aboutPageLeft">
 					<h2>We make it easier for everyone to experience the world</h2>
 					<p>Cras ultricies ligula sed magna dictum porta. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 						Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. </p>
@@ -178,8 +178,8 @@
 				</div>	
 			</div>
 			<div class="col-lg-6 col-md-12 col-sm-12">
-				<div class="aboutPageLeft">
-					<div class="aboutPageLeftInner">
+				<div class="aboutPageRight">
+					<div class="aboutPageRight">
 						<img class="img-fluid" src="images/about.jpg" alt="img" />
 					</div>
 				</div>
@@ -187,36 +187,34 @@
 		</div>
 	</div>	
 </section>
-<!-- END AboutPageMain -->
+<!-- END aboutPageMain -->
 
 <!-- START statsMain -->
 <section class="statsMain">
-<div class="container">
-	<div class="row">
-		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-			<div class="staticsOuter">
-				<div class="staticsInner">
-					<h4>Partner Flights</h4>
-					<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
-				</div>
-				<div class="staticsInner">
-					<h4>Partner Flights</h4>
-					<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
-				</div>
-				<div class="staticsInner">
-					<h4>Partner Flights</h4>
-					<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
-				</div>
-				<div class="staticsInner">
-					<h4>Partner Flights</h4>
-					<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
+	<div class="container">
+		<div class="row">
+			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+				<div class="staticsOuter">
+					<div class="staticsInner">
+						<h4>Partner Flights</h4>
+						<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
+					</div>
+					<div class="staticsInner">
+						<h4>Partner Flights</h4>
+						<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
+					</div>
+					<div class="staticsInner">
+						<h4>Partner Flights</h4>
+						<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
+					</div>
+					<div class="staticsInner">
+						<h4>Partner Flights</h4>
+						<p><span class="counter" data-to="500" data-speed="7000">500</span>K+</p>
+					</div>
 				</div>
 			</div>
-
-</div>
-</div>
-</div>
-</div>	
+		</div>
+	</div>
 </section>
 <!-- END statsMain -->
 
@@ -227,22 +225,26 @@
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="missionInner">
 					<h2>Sed ut perspiciatis unde</h2>
-					<p>Cheap Flight Tickets brings you the freedom to choose from a diverse range of partner airlines that cater to various comfort levels, budgets, and preferences. 
-					Whether you're seeking a luxurious flying experience or a budget-friendly option, our platform offers a comprehensive selection.</p>
-					<p>Partnering with major airlines such as Emirates, Air India, KLM, Singapore Airlines, Cathay Pacific, Etihad, American Airlines, Indigo, Air Canada, and more, 
-					we ensure that your journey is comfortable and memorable. </p>
+					<p>Atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+					id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.deserunt molestiae accusamus voluptas aut. Sapiente voluptatem nulla unde
+					quia harum illum ipsum dolore! Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem illum molestiae corrupti, maxime sint velit quibusdam.</p>
+					<p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Nulla porttitor accumsan tincidunt. Vestibulum ante 
+					ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, 
+					ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+					Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. </p>
 				</div>
 				<div class="missionInner">
 					<h2>Sed ut perspiciatis unde</h2>
-					<p>Booking a flight can be a complex process given the multitude of options and steps involved. That's where Team CFT comes in. We understand the challenges
-					you might face, and our dedicated support is available to assist you every step of the way.</p>
-					<p>Whether you're looking for assistance in finding, comparing, or booking cheap flights, or if you have any other queries, our team is at your beck and call. 
-					Your seamless travel experience is our top priority. </p>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
+					et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem illum molestiae corrupti, maxime sint velit quibusdam officiis ipsam a minima quos voluptates
+					possimus eaque, vitae, veniam consequuntur! Dolorem, architecto.</p>
+					<p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Nulla porttitor accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et 
+					ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta. Donec 
+					sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
 				</div>
 			</div>
-		
 		</div>
-
 	</div>
 </section>
 <!-- END missionMain -->
