--- a/travel-unravel_Final/about_us.html
+++ b/travel-unravel_Final/about_us.html
@@ -164,22 +164,20 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-md-12 col-sm-12">
 				<div class="aboutPageLeft">
-					<h2>We make it easier for everyone to experience the world</h2>
-					<p>Cras ultricies ligula sed magna dictum porta. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-						Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. </p>
-					<p>Cras ultricies ligula sed magna dictum porta. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-						Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. </p>
-					<ul>
-						<li>Making Flight Booking Easier</li>
-						<li>Best Deals on Flights</li>
-						<li>100% Client Satisfaction</li>
-						<li>Leading with Stringent Values </li>
-					</ul>
+					<h2>About Travel Unravel</h2>
+					<p>At Travel Unravel, we are passionate about turning your travel dreams into reality. With a firm belief that everyone deserves to experience the world, 
+					we have embedded this philosophy into our vision and mission. Our dedicated team is committed to providing you with wings that make your travel dreams 
+					take flight. Since our inception, we have transformed travel experiences for countless individuals, creating exceptional journeys that linger in memory. 
+					With our global presence spanning London and New York, we're just a call away from delivering delightful travel encounters. </p>
+					<h4>Our Expertise and Approach </h4>
+					<p>Backed by over 25 years of industry experience, the Travel Unravel team is composed of travel experts who specialize in crafting and customizing your 
+					journeys. Our goal is to make your vacation not just a trip, but an exciting and memorable adventure. We prioritize your comfort and ease, ensuring that 
+					our team guides you through your travel plans, designing itineraries that perfectly align with your desires.</p>
 				</div>	
 			</div>
 			<div class="col-lg-6 col-md-12 col-sm-12">
 				<div class="aboutPageRight">
-					<div class="aboutPageRight">
+					<div class="aboutPageRightInner">
 						<img class="img-fluid" src="images/about.jpg" alt="img" />
 					</div>
 				</div>
@@ -189,7 +187,7 @@
 </section>
 <!-- END aboutPageMain -->
 
-<!-- START statsMain -->
+<!-- START statsMain 
 <section class="statsMain">
 	<div class="container">
 		<div class="row">
@@ -224,24 +222,27 @@
 		<div class="row">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="missionInner">
-					<h2>Sed ut perspiciatis unde</h2>
-					<p>Atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
-					id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.deserunt molestiae accusamus voluptas aut. Sapiente voluptatem nulla unde
-					quia harum illum ipsum dolore! Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem illum molestiae corrupti, maxime sint velit quibusdam.</p>
-					<p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Nulla porttitor accumsan tincidunt. Vestibulum ante 
-					ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, 
-					ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta. Donec sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-					Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. </p>
+					<h2>The Essence of Team Travel Unravel</h2>
+					<p>Our core strength lies in effective teamwork. At Travel Unravel, we emphasize efficient collaboration to ensure the timely delivery of top-quality travel experiences.
+					 Our unparalleled knowledge spans every corner of the world, allowing us to offer you in-depth exploration opportunities. Our mission is to inspire your travel journey, 
+					 providing you with valuable insights on what to see and do. </p>
 				</div>
 				<div class="missionInner">
-					<h2>Sed ut perspiciatis unde</h2>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
-					et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem illum molestiae corrupti, maxime sint velit quibusdam officiis ipsam a minima quos voluptates
-					possimus eaque, vitae, veniam consequuntur! Dolorem, architecto.</p>
-					<p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Nulla porttitor accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et 
-					ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta. Donec 
-					sollicitudin molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+					<h4>Mission: Pride as Our Driving Force</h4>
+					<p>"Pride" encapsulates our driving force: Promoting Relations, Integrity to Deliver Excellence. We stand as an organization known for prioritizing exceptional holiday 
+					experiences. By personalizing packages, we guarantee outstanding vacation plans for you and your companions, fostering relationships and delivering with integrity.</p>
+				</div>
+				<div class="missionInner">
+					<h4>Vision: An Unmatched Experience</h4>
+					<p>Our vision revolves around enhancing your travel experiences. At Travel Unravel, we ensure your journey is cushioned with a diverse array of travel solutions and 
+					tailor-made holidays. When you book with us, whether it's a hotel room or a flight, you can expect a seamless process that culminates in an unforgettable holiday. 
+					We are committed to delivering the best for you.</p>
+				</div>
+				<div class="missionInner">
+					<h4>What Sets Us Apart</h4>
+					<p>At Travel Unravel, we offer unmatched service at unbeatable prices. Our commitment to resolving your concerns with diligence is unwavering. Transparency is our 
+					hallmark, evident in our price-drop policy that directly informs you of any reductions. With vigilant monitoring of airfares, if your flight's price drops before 
+					departure, we'll refund the difference within 2 weeks. You are indispensable to us, and we're dedicated to providing you with services that create cherished holiday memories.</p>
 				</div>
 			</div>
 		</div>
