--- a/travel-unravel_Final/index.html
+++ b/travel-unravel_Final/index.html
@@ -1011,6 +1011,7 @@
 </div>
 <!--========= POPUP AFTER SEARCH DESTINATION END ========-->
 
+
 <!-- START FOOTER -->
 <footer class="footer">
 	<div class="container">
@@ -1050,11 +1051,9 @@
 					<div class="footerInner">
 						<h3>Legal</h3>
 						<ul>
-							<li><a href="#">Terms of Website </a></li>
-							<li><a href="#">Use</a></li>
+							<li><a href="#">Terms of Website Use</a></li>
 							<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
-							<li><a href="#">Data Protection</a></li>
-							<li><a href="#">Policy</a></li>
+							<li><a href="#">Data Protection Policy</a></li>
 							<li><a href="privacy_policy.html">Privacy Policy</a></li>
 							<li><a href="#">Cookies Policy</a></li>
 							<li><a href="#">Travel Partner</a></li>
