--- a/travel-unravel_Final/about_us.html
+++ b/travel-unravel_Final/about_us.html
@@ -290,11 +290,9 @@
 					<div class="footerInner">
 						<h3>Legal</h3>
 						<ul>
-							<li><a href="#">Terms of Website </a></li>
-							<li><a href="#">Use</a></li>
+							<li><a href="#">Terms of Website Use</a></li>
 							<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
-							<li><a href="#">Data Protection</a></li>
-							<li><a href="#">Policy</a></li>
+							<li><a href="#">Data Protection Policy</a></li>
 							<li><a href="privacy_policy.html">Privacy Policy</a></li>
 							<li><a href="#">Cookies Policy</a></li>
 							<li><a href="#">Travel Partner</a></li>
