--- a/travel-unravel_Final/error-404.html
+++ b/travel-unravel_Final/error-404.html
@@ -167,98 +167,96 @@
 	</section> 
 
 	
-	<!-- START FOOTER -->
-	<footer class="footer">
+<!-- START FOOTER -->
+<footer class="footer">
+	<div class="container">
+		<div class="footerTop">
+			<div class="row">
+				<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 footerRES">
+					<div class="footerInner">
+						<a class="logoFooter" href="index.html"><img src="images/logo.svg" alt="logo" loading="lazy" /></a>
+						<div class="siteDetails">
+							<h3>Travel Unravel Holidays Private Limited</h3>
+							<p>Bearing Registration Number 07445398 is a company registered in England and Wales at Rear Ground Floor Hygeia Building, 66-68 College Road, Harrow, Middlesex, United Kingdom, HA1 1BE.</p>
+						</div>
+						<div class="siteDetails">
+							<h3>Corporate Office</h3>
+							<p>Corporate OfficeTravel Unravel Holidays<br /> 30th Floor 40 bank street<br /> Canary Wharf London E14 5NR</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
+					<div class="footerInner">
+						<h3>Quick Links</h3>
+						<ul>
+							<li><a href="about_us.html">About Us</a></li>
+							<li><a href="#">Disclaimer </a></li>
+							<li><a href="faq.html">FAQs</a></li>
+							<li><a href="#">Why Travel with Us? </a></li>
+							<li><a href="#">Self Payment</a></li>
+							<li><a href="#">Sitemap</a></li>
+						</ul>
+						<h3>Travel Partner</h3>
+						<ul>
+							<li><a href="#">Carbon Neutral Britain</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12 footerRES">
+					<div class="footerInner">
+						<h3>Legal</h3>
+						<ul>
+							<li><a href="#">Terms of Website Use</a></li>
+							<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
+							<li><a href="#">Data Protection Policy</a></li>
+							<li><a href="privacy_policy.html">Privacy Policy</a></li>
+							<li><a href="#">Cookies Policy</a></li>
+							<li><a href="#">Travel Partner</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
+					<div class="footerInner">
+						<h3>Social Media</h3>
+						<div class="socialIcon">
+							<ul>
+								<li><a href="https://www.facebook.com/travelunraveluk" target="_blank"><img src="images/fb_icon.svg" alt="facebook" loading="lazy" /></a></li>
+								<li><a href="https://www.instagram.com/travelunraveluk" target="_blank"><img src="images/insta_icon.svg" alt="instagram" loading="lazy" /></a></li>
+								<li><a href="https://twitter.com/TravelUnravelUK" target="_blank"><img src="images/twitter_icon.svg" alt="twitter" loading="lazy" /></a></li>
+							</ul>
+						</div>
+						<h3>Reach Us</h3>
+						<div class="addressFooter">
+							<ul>
+								<li>
+									<p>0203 588 8444</p>
+								</li>
+								<li>
+									<p>support@travelunravel.com</p>
+								</li>
+								<li>
+									<p>info@travelunravel.com</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="copy">
 		<div class="container">
-			<div class="footerTop">
-				<div class="row">
-					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 footerRES">
-						<div class="footerInner">
-							<a class="logoFooter" href="index.html"><img src="images/logo.svg" alt="logo" loading="lazy" /></a>
-							<div class="siteDetails">
-								<h3>Travel Unravel Holidays Private Limited</h3>
-								<p>Bearing Registration Number 07445398 is a company registered in England and Wales at Rear Ground Floor Hygeia Building, 66-68 College Road, Harrow, Middlesex, United Kingdom, HA1 1BE.</p>
-							</div>
-							<div class="siteDetails">
-								<h3>Corporate Office</h3>
-								<p>Corporate OfficeTravel Unravel Holidays<br /> 30th Floor 40 bank street<br /> Canary Wharf London E14 5NR</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
-						<div class="footerInner">
-							<h3>Quick Links</h3>
-							<ul>
-								<li><a href="about_us.html">About Us</a></li>
-								<li><a href="#">Disclaimer </a></li>
-								<li><a href="faq.html">FAQs</a></li>
-								<li><a href="#">Why Travel with Us? </a></li>
-								<li><a href="#">Self Payment</a></li>
-								<li><a href="#">Sitemap</a></li>
-							</ul>
-							<h3>Travel Partner</h3>
-							<ul>
-								<li><a href="#">Carbon Neutral Britain</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12 footerRES">
-						<div class="footerInner">
-							<h3>Legal</h3>
-							<ul>
-								<li><a href="#">Terms of Website </a></li>
-								<li><a href="#">Use</a></li>
-								<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
-								<li><a href="#">Data Protection</a></li>
-								<li><a href="#">Policy</a></li>
-								<li><a href="privacy_policy.html">Privacy Policy</a></li>
-								<li><a href="#">Cookies Policy</a></li>
-								<li><a href="#">Travel Partner</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
-						<div class="footerInner">
-							<h3>Social Media</h3>
-							<div class="socialIcon">
-								<ul>
-									<li><a href="https://www.facebook.com/travelunraveluk" target="_blank"><img src="images/fb_icon.svg" alt="facebook" loading="lazy" /></a></li>
-									<li><a href="https://www.instagram.com/travelunraveluk" target="_blank"><img src="images/insta_icon.svg" alt="instagram" loading="lazy" /></a></li>
-									<li><a href="https://twitter.com/TravelUnravelUK" target="_blank"><img src="images/twitter_icon.svg" alt="twitter" loading="lazy" /></a></li>
-								</ul>
-							</div>
-							<h3>Reach Us</h3>
-							<div class="addressFooter">
-								<ul>
-									<li>
-										<p>0203 588 8444</p>
-									</li>
-									<li>
-										<p>support@travelunravel.com</p>
-									</li>
-									<li>
-										<p>info@travelunravel.com</p>
-									</li>
-								</ul>
-							</div>
-						</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 copyRES">
+					<div class="copyInner">
+						<p>&copy; 2022 Travel Unravel Holidays Private Limited</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="copy">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 copyRES">
-						<div class="copyInner">
-							<p>&copy; 2022 Travel Unravel Holidays Private Limited</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- END FOOTER -->
+	</div>
+</footer>
+<!-- END FOOTER -->
 
 		<!-- js -->
 		<script src="js/jquery.min.js"></script>
