--- a/travel-unravel_Final/privacy_policy.html
+++ b/travel-unravel_Final/privacy_policy.html
@@ -295,7 +295,7 @@
 									</tr>
 									<tr>
 										<td>New customer registration</td>
-										<td>(a) Identity<br>(b) Contact</td>
+										<td><p>(a) Identity</p><p>(b) Contact</p></td>
 										<td>Complete the requested services with you</td>
 									</tr>
 									<tr>
@@ -306,39 +306,39 @@
 											<p>Sharing booking information with suppliers so that they can fulfil your booking</p>
 											<p>Collecting any payments that you owe us</p>
 										</td>
-										<td>(a) Identity<br>(b) Contact<br>(c) Financial<br>(d) Transaction<br>(e) Marketing and Communications</td>
-										<td>(a) Complete the requested services<br>(b) Necessary for legitimate interests or to recover due payments</td>
+										<td><p>(a) Identity</p><p>(b) Contact<p>(c) Financial</p><p>(d) Transaction</p><p>(e) Marketing and Communications</p></td>
+										<td><p>(a) Complete the requested services</p><p>(b) Necessary for legitimate interests or to recover due payments</p></td>
 									</tr>
 									<tr>
-										<td>Customer relationship management including:<br>(a) Notify regarding any changes in terms or privacy policy<br>(b) Asking you to write a service review</td>
-										<td>(a) Identity<br>(b) Contact<br>(c) Profile<br>(d) Marketing and Communications</td>
+										<td><p>Customer relationship management including:</p><p>(a) Notify regarding any changes in terms or privacy policy</p><p>(b) Asking you to write a service review</p></td>
+										<td><p>(a) Identity</p><p>(b) Contact</p><p>(c) Profile</p><p>(d) Marketing and Communications</p></td>
 										<td>
-											(a) Complete the requested services<br>
-											(b) Necessary to comply with but under a legal obligation<br>
-											(c) Necessary under legitimate interests to keep our data updated and insights on how customers use our services.
+											<p>(a) Complete the requested services</p>
+											<p>(b) Necessary to comply with but under a legal obligation</p>
+											<p>(c) Necessary under legitimate interests to keep our data updated and insights on how customers use our services.</p>
 										</td>
 									</tr>
 									<tr>
 										<td>To protect our business or the website (which includes troubleshooting, data analysis, testing, system maintenance, support, data hosting)</td>
-										<td>(a) Identity<br>(b) Contact<br>(c) Technical</td>
+										<td><p>(a) Identity</p><p>(b) Contact</p><p>(c) Technical</p></td>
 										<td>
-											(a) Necessary for our legitimate interests to run our business, network security, fraud prevention<br>
-											(b) Necessary to comply with under a legal obligation
+											<p>(a) Necessary for our legitimate interests to run our business, network security, fraud prevention</p>
+											<p>(b) Necessary to comply with under a legal obligation</p>
 										</td>
 									</tr>
 									<tr>
 										<td>Deliver website content and advertisements to customers and to measure or understand the effectiveness of the served advertisement</td>
-										<td>(a) Identity<br>(b) Contact<br>(c) Profile<br>(d) Usage<br>(e) Marketing and Communications<br>(f) Technical</td>
+										<td><p>(a) Identity</p><p>(b) Contact</p><p>(c) Profile</p><p>(d) Usage</p><p>(e) Marketing and Communications</p><p>(f) Technical</p></td>
 										<td>Necessary for legitimate interests to know how the customers use our services, to grow the business and to enhance our marketing strategy</td>
 									</tr>
 									<tr>
 										<td>Use data analytics to improve our website, services, marketing, customer relationships </td>
-										<td>(a) Technical<br>(b) Usage</td>
+										<td><p>(a) Technical</p><p>(b) Usage</p></td>
 										<td>Necessary for legitimate interests to define types of customers, to keep the website updated and relevant, business development</td>
 									</tr>
 									<tr>
 										<td>Suggestions and recommendations about services of your interest</td>
-										<td>(a) Identity<br>(b) Contact<br>(c) Technical<br>(d) Usage<br>(e) Profile</td>
+										<td><p>(a) Identity</p><p>(b) Contact</p><p>(c) Technical</p><p>(d) Usage</p><p>(e) Profile</p></td>
 										<td>Necessary for our legitimate interests to develop our services and business growth</td>
 									</tr>
 								</tbody>
@@ -361,9 +361,7 @@
 						<p>We use your personal data for the purposes for which we collected it unless we reasonably consider that we need to use it for another reason which is compatible 
 						with the original purpose. If you want an explanation about the process for the new purpose, please contact us.</p>
 						<p>In case we use your personal data for an unrelated purpose, we will notify you.</p>
-					</div>
-
-					<div class="termsInner">
+	
 						<h4>Disclosures of your personal data</h4>
 						<p><strong>We may share your data with the parties for the purposes set out above.</strong></p>
 						<ul>
@@ -378,9 +376,7 @@
 						</ul>
 						<p><strong>All the third parties associated with us respect the security of your personal data and to treat it by the law or as mentioned under this Policy. We do not allow 
 						third-party to use your personal data for any other purpose except the one specified under our instructions.</strong></p>
-					</div>
-
-					<div class="termsInner">
+	
 						<h4>International transfers</h4>
 						<p>We share your personal data within the Travel Unravel Group. This includes transferring your data outside the EEA.</p>
 						<p>We make sure that your personal data is protected by all our group companies and they follow the same rules while processing your personal data. They are 
@@ -397,17 +393,13 @@
 						<p><strong>In certain circumstances we believe that the transfer is necessary for our contract with you. For example, if we have made a booking for you with a 
 						supplier outside the EEA or with your consent, which we seek and inform you about the situation. Contact us if you want any further information on the specific 
 						mechanism that we use when we transfer your personal data out of the EEA.</strong></p>
-					</div>
-					
-					<div class="termsInner">
+
 						<h4>Data security</h4>
 						<p>We have adequate security measures that help in preventing your personal data from being accidentally used or accessed in an unauthorised way. With that, 
 						we limit the access to your personal data to the employees and third parties associated with us who have a business need to know it. They use your personal 
 						data on our instructions and are subject to a duty of confidentiality under this Policy. We have put procedures to deal with suspected data breach and 
 						will notify you when we suspect any such activity.</p>
-					</div>
-
-					<div class="termsInner">
+	
 						<h4>Data retention</h4>
 						<p>We retain your data for as long as necessary. This is done to fulfil the services you requested for including any legal, accounting, or reporting requirements. 
 						To determine the exact retention period for personal data, the potential risk of harm from unauthorised use is considered as the determining factor for disclosure 
@@ -416,9 +408,7 @@
 						If you do not book with us again for more than six years we will delete your data.</p>
 						<p>In certain circumstances you are allowed to ask us to delete your data. Sometimes we may anonymise your personal data and use it for research or statistical 
 						purposes. In such a case, we use this information without any further notice to you.</p>
-					</div>
-
-					<div class="termsInner">
+	
 						<h4>Your legal rights</h4>
 						<p>Under some circumstances, you have the right under data protection laws regarding your personal data. With this, you may:</p>
 						<p>Ask to access your personal data (commonly known as 'data subject access request'. Under this, you can receive a copy of the personal data we hold about you and 
@@ -436,16 +426,12 @@
 						<p>You may withdraw the consent at any time to process your personal data. However, this will not affect the lawfulness of any processing carried out before your 
 						withdrawal. However, your withdrawal may lead to our inability to provide you with certain services to you. We will inform you about this at the time you 
 						withdraw your consent. If you still want to go ahead and practice any of the rights mentioned above, please Contact us.</p>
-					</div>
-
-					<div class="termsInner">
+		
 						<h4>What we may Need from you</h4>
 						<p>We request you and ask you for specific information to confirm your identity and ensure that you have the right to access your personal data (or any of your rights). For
 						us, this is a security measure to ensure that personal data is not disclosed to any other person who has no rights on it. We will contact you to ask you for further 
 						information about your request inorder to speed up the response and process.</p>
-					</div>
-
-					<div class="termsInner">
+		
 						<h4>Time limit to respond</h4>
 						<p>We respond to all the legitimate requests within one month of the time from where the request has been initiated. However, it may take longer than a month if your 
 						request is complex or you have made multiple requests. In such a case, we will keep you updated.</p>
