--- a/travel-unravel_Final/cookies_policy.html
+++ b/travel-unravel_Final/cookies_policy.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="csrf-token" content="wvpCAxAP4XAMZjJ94zyhGhQdCdgxZY0MxDMHUzr7">
-	<title>Error 404</title>
+	<title>:: Cookies Policy ::</title>
 	<meta name="title" content="">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
@@ -155,18 +155,91 @@
 </section>
 <!-- END banner -->
 
-	<section class="error_sec1">
-		<div class="container">
-			<div class="error_sec2">
-				<img src="images/error-404.svg" alt="Error 404" loading="lazy" />
-				<h3>Oops! Page Not Found</h3>
-				<p>You seem to have travelled to the wrong address; the page you’re looking for doesn’t exist.</p>
-			    <a href="index.html">Go to Homepage.</a>
+
+<!-- START termsMain -->
+<section class="termsMain">
+    <div class="container">
+        <div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="terms">
+					<h2>Cookies Policy</h2>
+					<div class="termsInner">
+						<h4>How are we gathering information and the best way to utilize cookies?</h4>
+						<p>When you browse our site, <a href="#">www.travelunravel.com</a> and our online services, ie., our mobile application, you agree that we are permitted to access cookies and 
+						store your website address. With these cookies and different methods of gathering your information improves your browsing experience. This also includes 
+						knowing the gadget type that you used to get to our site and your geolocation (know 'How we gather and utilize geo-location?')</p>
+
+						<h4>What do we mean by ‘cookies'?</h4>
+						<p>The micro files records on the gadget installed by the websites you have browsed or the email you received are known as cookies. These cookies are utilized to make the 
+						website user-friendly and permit the owners of the website business with marketing details of interest of the user.</p>
+
+						<h4>Example</h4>
+						<p>Cookies store your selected language and the country you accessed our webpage from for your convenience. Departure airport information is also retrieved from cookies.</p>
+						<p>When you leave off in the middle of the booking process or accidentally close the browser, the cookies ensure that when you return to the website, you are brought 
+						back to the booking page to resume.</p>
+
+						<h4>When do we use cookies?</h4>
+						<h5>The reason for access:</h5>
+						<p>Technical - The cookies are only for technical purposes and this has led to an efficient working of <a href="#">www.travelunravel.com</a> Website’s traffic is maintained with help 
+						of cookies to make sure that a reliable and consistent service is given to you as a user. To grant limited access to the users of the key parts of the site that 
+						leads to better performance levels.</p>
+						<p>When you accept our Privacy Policy, the cookies stored automatically accept the terms and conditions of the website without which <a href="#">www.travelunravel.com</a> you will 
+						not be given the access.</p>
+
+
+						<h4>Ease of Use</h4>
+						<p>As a user, a better use of <a href="#">www.travelunravel.com</a> is granted with the access of cookies. Example, to: Memorize the language and the country to present relevant 
+						information to the user. Keep the details of the departure of the airport for the booked flight.</p>
+
+						<h4>Tracking</h4>
+						<p>The cookies are used to collect information on how you navigate on our site. For example, to note the feedback from the customer regarding their satisfaction 
+						through access to the survey. In-depth analysis of the way the user accesses the website to enhance the UI/ UX of the site and its use.</p>
+
+						<h4>Marketing</h4>
+						<p>The cookies used enables us the message sharing with the user. For example,</p>
+						<p>All the pages of <a href="#">www.travelunravel.com</a> are available for marketing.</p>
+						<p>The information received on the website also accelerates the credit card offers.</p>
+						<p>Third party agencies may display advertising material and track its effectiveness.</p>
+						<p>Send messages to offer products that are dependent on the web pages viewed by you and the ones that the agency presents when you visit other websites.</p>
+						<p>If you want to opt out of kind of ads, you can visit <a href="#">http://www.networkadvertising.org/choices</a></p>
+						<p><strong>Note:</strong> If you delete the cookies stored on your device, the company will lose the ability to recognize that you have chosen to opt out of certain 
+						activities, such as receiving marketing banners from a third-party agency. As a result, you may still encounter these marketing banners when you visit specific 
+						websites, as the company won't be able to track your preference due to the absence of cookies.</p>
+
+
+						<h4>How to deny the consent to use of cookies?</h4>
+						<p>You may choose to not accept the use of cookies by changing your browser setting (Chrome, Firefox or Internet Explorer). If you have chosen to not to 
+						permit this use of cookies, then certain pages on our website might load and function properly.</p>
+						<p>For more information regarding ‘how to withdraw the use of cookies’, you can refer to the ‘Help’ section of your browser or read further about 
+						it on <a href="#">www.allaboutcookies.org.</a></p>
+
+						<h4>What do we mean by online advertising or interest-based advertising?</h4>
+						<p>When we say online advertising or interest-based advertising, it is a to present ads on the website when you visit them and make them more relevant depending on your interests.</p>
+						<p>People grouped together is because of the common interests and it depends on their browsing history and activities. You have displayed these ads according to 
+						your behaviour similar to your shared interests. Advertising according to this is more relevant and useful for users. Ads relevant for you are based on the website 
+						content that you browse. It is also called retargeting.</p>
+						<p>To know more about retargeting, refer to <a href="#">www.youronlinechoices.com/uk</a></p>
+
+						<h4>How can you opt out of online behavioural advertising?</h4>
+						<p>There are several websites that help you in the process of opting out of online behavioural advertising from third-party agencies that work on this advertising model for website 
+						publishers. The websites are <a href="#">http://www.youronlinechoices.com/uk/</a> and <a href="#">http://www.networkadvertising.org/choices.</a></p>
+
+						<h4>Note: Opting out will not result in</h4>
+						<p>Advertising will stop showcasing about <a href="#">www.travelunravel.com</a>’s product and services on our own website and won’t be in accordance with your interest. All online 
+						behavioural advertising will stop as it will apply to the 3rd party vendors who have opted for services.</p>
+						<p>There won’t be any other kind of advertising on the website or any other website that you might access. However, there’s a possibility, you will see less relevant 
+						ads based on your interest.</p>
+						<p>Additionally, deleting the cookies will make you opt out for preferences so you are not required to opt out again.</p>
+
+					</div>
+				</div>
 			</div>
 		</div>
-	</section> 
+	</div>
+</section>
+<!-- END termsMain -->
 
-	
+
 <!-- START FOOTER -->
 <footer class="footer">
 	<div class="container">
@@ -258,118 +331,119 @@
 </footer>
 <!-- END FOOTER -->
 
-		<!-- js -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.bundle.min.js"></script>
-	
-	
-	<!--========= MOBILE MENU SCRIPT START =========-->
-	<script>
-		'use strict';
-		(function() {
-			var body = document.body;
-			var burgerMenu = document.getElementsByClassName('b-menu')[0];
-			var burgerContain = document.getElementsByClassName('b-container')[0];
-			var burgerNav = document.getElementsByClassName('b-nav')[0];
-			burgerMenu.addEventListener('click', function toggleClasses() {
-				[body, burgerContain, burgerNav].forEach(function (el) {
-					el.classList.toggle('open');
-				});
-			}, false);
-		})();
-	</script>
-	<!--=========== MOBILE MENU SCRIPT END ==========-->
-	
-	<!-- START bootstrap-slider.min -->
-	<script type="text/javascript" src="js/bootstrap-slider.min.js"></script>
-	<script>
-		$("#ex1").slider({
-			tooltip: 'always'
-		});
-		$("#ex2").slider({
-			tooltip: 'always',
-		//	range: true,
-		//	limit: true
-		});
-		$("#ex3").slider({
-			tooltip: 'always'
-		});
-		$("#ex4").slider({
-			tooltip: 'always'
-		});
-		$("#ex5").slider({
-			tooltip: 'always'
-		});
-		$("#ex6").slider({
-			tooltip: 'always'
-		});
-	</script> 
-	<!-- START bootstrap-slider.min -->
-	
-	<!--======= FIXED HEADER ON SCROLL START
-	<script>
-	$(window).scroll(function() {             // this will work when your window scrolled.
-		var height = $(window).scrollTop();   //getting the scrolling height of window
-		if(height  > 2) {
-			$("header").addClass('fixed_header');
-		} 
-		else {
-			$("header").removeClass('fixed_header');
-		}
+
+<!-- js -->
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+
+
+<!--========= MOBILE MENU SCRIPT START =========-->
+<script>
+'use strict';
+(function() {
+    var body = document.body;
+    var burgerMenu = document.getElementsByClassName('b-menu')[0];
+    var burgerContain = document.getElementsByClassName('b-container')[0];
+    var burgerNav = document.getElementsByClassName('b-nav')[0];
+    burgerMenu.addEventListener('click', function toggleClasses() {
+        [body, burgerContain, burgerNav].forEach(function (el) {
+            el.classList.toggle('open');
+        });
+    }, false);
+})();
+</script>
+<!--=========== MOBILE MENU SCRIPT END ==========-->
+
+<!-- START bootstrap-slider.min -->
+<script type="text/javascript" src="js/bootstrap-slider.min.js"></script>
+<script>
+	$("#ex1").slider({
+		tooltip: 'always'
 	});
-	</script>
-	<!--====== FIXED HEADER ON SCROLL END =======-->
-	
-	<!--==== PASSENGER/CLASS DROPDOWN SCRIPT ====-->
-	<script>
-	$(document).ready(function(){
-		$('.passEco_dropdown > a').click(function(evt){
-			evt.stopPropagation();
-			$(".passEco_dropBox").css({
-				"-webkit-transform" : "translateY(0)",
-				"transform" : "translateY(0)",
-				"visibility" : "visible",
-				"opacity" : "1"
-			});
+	$("#ex2").slider({
+		tooltip: 'always',
+	//	range: true,
+	//	limit: true
+	});
+	$("#ex3").slider({
+		tooltip: 'always'
+	});
+	$("#ex4").slider({
+		tooltip: 'always'
+	});
+	$("#ex5").slider({
+		tooltip: 'always'
+	});
+	$("#ex6").slider({
+		tooltip: 'always'
+	});
+</script> 
+<!-- START bootstrap-slider.min -->
+
+<!--======= FIXED HEADER ON SCROLL START 
+<script>
+$(window).scroll(function() {             // this will work when your window scrolled.
+    var height = $(window).scrollTop();   //getting the scrolling height of window
+	if(height  > 2) {
+	    $("header").addClass('fixed_header');
+	} 
+	else {
+	    $("header").removeClass('fixed_header');
+	}
+});
+</script>
+<!--====== FIXED HEADER ON SCROLL END =======-->
+
+<!--==== PASSENGER/CLASS DROPDOWN SCRIPT ====-->
+<script>
+$(document).ready(function(){
+	$('.passEco_dropdown > a').click(function(evt){
+		evt.stopPropagation();
+		$(".passEco_dropBox").css({
+		    "-webkit-transform" : "translateY(0)",
+		    "transform" : "translateY(0)",
+		    "visibility" : "visible",
+		    "opacity" : "1"
 		});
 	});
-	$(document).click(function(e) {
-		var container = $(".passEco_dropdown");
-		var applybtn = $(".apply_filters > a");
-		if ((!container.is(e.target) && container.has(e.target).length === 0) || (applybtn.is(e.target))) {
-			$(".passEco_dropBox").css({
-				"-webkit-transform" : "translateY(-15px)",
-				"transform" : "translateY(-15px)",
-				"visibility" : "hidden",
-				"opacity" : "0"
-			});
-		}
-	});
-	</script> 
-	<!--==== PASSENGER/CLASS DROPDOWN SCRIPT END ====-->
-	
-	<!-- START radioTab -->
-	<script>
-		$('[name=tab]').each(function(i,d){
-			var p = $(this).prop('checked');
-		//   console.log(p);
-			if(p){
-			$('.bannerFormAll').eq(i)
-				.addClass('on');
-			}    
-		
-		});  
-		$('[name=tab]').on('change', function(){
-			var p = $(this).prop('checked');
-			// $(type).index(this) == nth-of-type
-			var i = $('[name=tab]').index(this);
-			$('.bannerFormAll').removeClass('on');
-			$('.bannerFormAll').eq(i).addClass('on');
+});
+$(document).click(function(e) {
+	var container = $(".passEco_dropdown");
+	var applybtn = $(".apply_filters > a");
+	if ((!container.is(e.target) && container.has(e.target).length === 0) || (applybtn.is(e.target))) {
+		$(".passEco_dropBox").css({
+		    "-webkit-transform" : "translateY(-15px)",
+		    "transform" : "translateY(-15px)",
+		    "visibility" : "hidden",
+		    "opacity" : "0"
 		});
-		
-	</script>
-	<!-- END radioTab -->
+	}
+});
+</script> 
+<!--==== PASSENGER/CLASS DROPDOWN SCRIPT END ====-->
+
+<!-- START radioTab -->
+<script>
+	$('[name=tab]').each(function(i,d){
+		var p = $(this).prop('checked');
+	//   console.log(p);
+		if(p){
+		$('.bannerFormAll').eq(i)
+			.addClass('on');
+		}    
 	
+	});  
+	$('[name=tab]').on('change', function(){
+		var p = $(this).prop('checked');
+		// $(type).index(this) == nth-of-type
+		var i = $('[name=tab]').index(this);
+		$('.bannerFormAll').removeClass('on');
+		$('.bannerFormAll').eq(i).addClass('on');
+	});
+	
+</script>
+<!-- END radioTab -->
+
 
 <!-- START Header -->
 <script>
@@ -379,17 +453,6 @@ $('header').each(function() {
 $('section.banner').hide();
 </script>
 <!-- END Header -->
-	
-
-<!-- START Modal Show on window load -->
-<script type="text/javascript">
-	$(window).on('load', function() {
-		$('#myModal').modal('show');
-	});
-	</script>
-	<!-- END Modal Show on window load -->
-
-
 
 </body>
 </html>
