--- a/travel-unravel_Final/data_protection_policy.html
+++ b/travel-unravel_Final/data_protection_policy.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="csrf-token" content="wvpCAxAP4XAMZjJ94zyhGhQdCdgxZY0MxDMHUzr7">
-	<title>:: Privacy Policy ::</title>
+	<title>:: Data Protection Policy ::</title>
 	<meta name="title" content="">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
@@ -531,7 +531,6 @@
 	</div>
 </footer>
 <!-- END FOOTER -->
-
 	
 	<!-- js -->
 	<script src="js/jquery.min.js"></script>
