--- a/travel-unravel_Final/terms_and_conditions.html
+++ b/travel-unravel_Final/terms_and_conditions.html
@@ -428,7 +428,6 @@
 <!-- END termsMain -->
 
 
-
 <!-- START FOOTER -->
 <footer class="footer">
 	<div class="container">
@@ -468,11 +467,11 @@
 					<div class="footerInner">
 						<h3>Legal</h3>
 						<ul>
-							<li><a href="#">Terms of Website Use</a></li>
+							<li><a href="terms_of_website.html">Terms of Website Use</a></li>
 							<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
-							<li><a href="#">Data Protection Policy</a></li>
+							<li><a href="data_protection_policy.html">Data Protection Policy</a></li>
 							<li><a href="privacy_policy.html">Privacy Policy</a></li>
-							<li><a href="#">Cookies Policy</a></li>
+							<li><a href="cookies_policy.html">Cookies Policy</a></li>
 							<li><a href="#">Travel Partner</a></li>
 						</ul>
 					</div>
@@ -519,6 +518,7 @@
 	</div>
 </footer>
 <!-- END FOOTER -->
+
 
 	<!-- js -->
 	<script src="js/jquery.min.js"></script>
